@@ -1,4 +1,5 @@
 30 Jul 2018
+fix: allow special chars for db password backupdb.php
 move: breadcrumbs() to its own file
 update: several cleanup scripts to fluentPDO
 fix: incorrect lang variable name used modtask.php
